Index Page for Chart of Accounts

--- a/src/Omdh.Accounting.Domain.Shared/Localization/Accounting/ar.json
+++ b/src/Omdh.Accounting.Domain.Shared/Localization/Accounting/ar.json
@@ -2,17 +2,17 @@
   "culture": "ar",
   "texts": {
     "AppName": "Accounting",
-    "Menu:Home": "منزل، بيت",
+    "Menu:Home": "القائمة الرئيسية",
     "Menu:ContactUs": "اتصل بنا",
     "Menu:ArticleSample": "عينة المادة",
-    "Home": "منزل، بيت",
+    "Home": "الرئيسية",
     "Welcome": "مرحبا",
-    "LongWelcomeMessage": "مرحبا بكم في التطبيق. هذا مشروع بدء التشغيل يعتمد على إطار عمل برنامج ABP. لمزيد من المعلومات قم بزيارة",
+    "LongWelcomeMessage": "مرحباً بكـم في نظام المحاسبة ",
     "Date": "تاريخ",
-    "Permission:Dashboard": "لوحة القيادة",
-    "Menu:Dashboard": "لوحة القيادة",
+    "Permission:Dashboard": "لوحة التحكم",
+    "Menu:Dashboard": "لوحة التحكم",
     "Menu:HomePage": "الصفحة الرئيسية",
-    "Dashboard": "لوحة القيادة",
+    "Dashboard": "لوحة التحكم",
     "ExternalProvider:Google": "جوجل",
     "ExternalProvider:Google:ClientId": "معرف العميل",
     "ExternalProvider:Google:ClientSecret": "سر العميل",
@@ -35,8 +35,47 @@
     "Dark": "مظلم",
     "Light": "ضوء",
     "Unspecified": "نظام",
+    "PublishDate": "تاريخ النشر",
+    "CreationTime": "تاريخ الانشاء",
     "SeeAllUsers": "رؤية كافة المستخدمين",
     "TakePhoto": "تصوير",
-    "ChoosePhoto": "اختر صورة"
+    "ChoosePhoto": "اختر صورة",
+    "Accounts": "الحـسابات",
+    "Menu:Accounts": "الحـسابات",
+    "ChartOfAccounts": "دليل الحسابات",
+    "Menu:ChartOfAccounts": "دليل الحسابات",
+    "Account Number": "الرقم",
+    "Account Level": "المستوى",
+    "Account Code": "الكود",
+    "Account Name": "الاسم",
+    "Account Type": "النوع",
+    "Account Category": "الفئة",
+    //----------
+    "Enum:AccountType.0": "جديد",
+    "Enum:AccountType.1": "بنكـي",
+    "Enum:AccountType.2": "كـاش",
+    "Enum:AccountType.3": "Receivable",
+    "Enum:AccountType.4": "Payable",
+    "Enum:AccountType.5": "Inventory",
+    "Enum:AccountType.6": "FixedAsset",
+    "Enum:AccountType.7": "IntangibleAsset",
+    "Enum:AccountType.8": "OtherAsset",
+    "Enum:AccountType.9": "OtherLiability",
+    "Enum:AccountType.10": "EquityCapital",
+    //----------------------------
+    "Enum:AccountStatus.0": "مسوده",
+    "Enum:AccountStatus.1": "فعال",
+    "Enum:AccountStatus.2": "غير فعال",
+    "Enum:AccountStatus.3": "مغلق",
+    "Enum:AccountStatus.4": "معلق",
+    //----------------------------
+    "Enum:AccountCategory.0": "مسوده",
+    "Enum:AccountCategory.1": "Asset",
+    "Enum:AccountCategory.2": "Liability",
+    "Enum:AccountCategory.3": "Equity",
+    "Enum:AccountCategory.4": "Revenue",
+    "Enum:AccountCategory.5": "Expense",
+    "Enum:AccountCategory.6": "Other"
+    //----------------------------
   }
 }
